--- a/Kappa.ipynb
+++ b/Kappa.ipynb
@@ -16,6 +16,7 @@
    "source": [
     "import numpy as np\n",
     "from scipy.stats import chi2\n",
+    "import matplotlib.pyplot as plt",
     "\n",
     "# Define the rating numbers as a matrix\n",
     "rating_numbers = np.array([\n",
